2010-03-04 Caolán McNamara <cmc at OOo>:
	* ooo#107768 fix crash in long strings in spellml mode
	* hun#1999737 add some malloc checks
	* hun#1999769 drop old buffer on realloc failure
	* hun#2005643 tidy string functions
	* hun#2005643 micro-opt
	* hun#2006077 free strings on failed dict parse

2010-03-03 Németh László <nemeth at OOo>:
	* hunspell/(affixmgr, suggestmgr).cxx: add character sequence
	  support for MAP suggestion, using parenthesized character groups
	  in the syntax, eg. MAP ß(ss).
	* man/hunspell.4, tests/map*: documentation and test files

2010-02-25 Németh László <nemeth at OOo>:
	* hunspell/hunspell.cxx: add recursion limit for BREAK (fix OOo Issue 106267)

	* hunspell/hunspell.cxx: fix crash in morphological analysis of
	  capitalized words with ending dashes

	* affixmgr.cxx: fix morphological analysis of long numbers combined with dash,
	  eg. 45-00000045 (reported by a@freeblog.hu).

2010-02-23 Caolán McNamara <cmc at OOo>:
	* hun#2314461 improve ispell-alike mode
	* hun#2784983 improve default language detection
	* hun#2812045 fix some compiler warnings
	* hun#2910695 survive missing HOME dir
	* hun#2934195 fix suggestmgr crash
	* hun#2921129 remove unused variables
	* hun#2826164 make sure make check uses the in-tree libhunspell
	* bump toolchain to support --disable-rpath
	* hun#2843984 fix coverity warning
	* hun#2843986 fix coverity warning
	* hun#2077630 add iconv lib
	* make gcc strict-aliasing warning free
	* make cppcheck warning free

2008-11-01 Németh László <nemeth at OOo>:
	* replist.*, hunspell.cxx, affixmgr.cxx: new input and output
          conversion support, see ICONV and OCONV keywords in the Hunspell(4)
          manual page and the test examples. The input/output conversion
          problem of syllabic languages reported by Daniel Yacob and
          Shewangizaw Gulilat.
        - tests/{iconv,oconv}.*: test examples

	* tools/wordforms: word generation script for dictionary developers